--- a/Back/test.html
+++ b/Back/test.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Test Page</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+    <style>
+      #mapid {
+        height: 600px;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <h1>Test Page</h1>
@@ -49,9 +57,13 @@
             <input type="submit" id="submit-button" value="Submit">
         </form>
     <div id="yearly-line-plot"></div>
+    <div id="mapid"></div>
+    <div id="radial-chart"></div>
+    <div id="bar-chart"></div>
     
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="test2.js"></script>
+
   </body>
 </html>
